crates/ars-components/src/data_display/rating_group/snapshots/ars_components__data_display__rating_group__tests__rating_group_item_unhighlighted.snap
---
source: crates/ars-components/src/data_display/rating_group/mod.rs
expression: snapshot_attrs(&whole_api.item_attrs(4))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-index",
            ),
            String(
                "4",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "rating-group",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "5 stars",
            ),
        ),
        (
            Role,
            String(
                "radio",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
