crates/ars-components/src/data_display/rating_group/snapshots/ars_components__data_display__rating_group__tests__rating_group_label.snap
---
source: crates/ars-components/src/data_display/rating_group/mod.rs
expression: snapshot_attrs(&whole_api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "rating-group",
            ),
        ),
        (
            Id,
            String(
                "rating-label",
            ),
        ),
        (
            For,
            String(
                "rating-control",
            ),
        ),
    ],
    styles: [],
}
